k8s/config/ctl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ctl
  namespace: jobico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctl
  template:
    metadata:
      labels:
        app: ctl
    spec:
      containers:
      - name: ctl
        image: jobico/ctl:latest
        imagePullPolicy: Never
        ports:
        - name: api
          containerPort: 50052
        - name: pprof
          containerPort: 6060
        volumeMounts:
        - name: ctl-data
          mountPath: /usr/share/jobico/ctl
  volumeClaimTemplates:
    - metadata:
        name: ctl-data
        namespace: jobico
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: ctl
  name: ctl
  namespace: jobico
spec:
  selector:
    app: ctl
  ports:
  - name: api
    port: 50052
    targetPort: api
  - name: pprof
    port: 6060
    targetPort: pprof
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: ctl-ingress-grpc
  namespace: jobico
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ctl
      secretName: ctl-cert
  rules:
    - host: ctl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ctl
                port:
                  number: 50052
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ctl-ingress-http
  namespace: jobico
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ctl
      secretName: ctl-cert
  rules:
    - host: ctl
      http:
        paths:
          - path: /debug/
            pathType: Prefix
            backend:
              service:
                name: ctl
                port:
                  number: 6060
