k8s/config/exec.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: exec
  name: exec
  namespace: jobico
spec:
  selector:
    app: exec
  ports:
    - name: api
      port: 8585
      targetPort: 8585
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: exec-ingress-http
  namespace: jobico
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - exec
      secretName: exec-cert
  rules:
    - host: exec
      http:
        paths:
          - path: /debug/
            pathType: Prefix
            backend:
              service:
                name: exec
                port:
                  number: 8585
