k8s/config/listener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listener
  namespace: jobico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listener
  template:
    metadata:
      labels:
        app: listener
    spec:
      restartPolicy: Always
      containers:
      - name: listener
        image: jobico/listener:latest
        imagePullPolicy: Never
        ports:
        - name: api
          containerPort: 8080
        - name: pprof
          containerPort: 6060
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: listener
  name: listener
  namespace: jobico
spec:
  selector:
    app: listener
  ports:
  - name: api
    port: 8080
    targetPort: api
  - name: pprof
    port: 6060
    targetPort: pprof
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: listener-ingress-http
  namespace: jobico
spec:
  ingressClassName: nginx
  tls:
  - secretName: listener-cert
    hosts:
      - listener
  rules:
    - host: listener
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: listener
                port:
                  number: 8080
          - path: /debug/
            pathType: Prefix
            backend:
              service:
                name: listener
                port:
                  number: 6060
