k8s/config/recorder.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: recorder
  namespace: jobico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recorder
  template:
    metadata:
      labels:
        app: recorder
    spec:
      containers:
      - name: recorder
        image: jobico/recorder:latest
        imagePullPolicy: Never
        ports:
        - name: api
          containerPort: 50054
        - name: pprof
          containerPort: 6060
        volumeMounts:
          - name: recorder-data
            mountPath: /usr/share/jobico/recorder
  volumeClaimTemplates:
    - metadata:
        name: recorder-data
        namespace: jobico
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: recorder
  name: recorder
  namespace: jobico
spec:
  selector:
    app: recorder
  ports:
    - name: api
      port: 50054
      targetPort: api
    - name: pprof
      port: 6060
      targetPort: pprof
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: recorder-ingress-grpc
  namespace: jobico
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - recorder
      secretName: recorder-cert
  rules:
    - host: recorder
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recorder
                port:
                  number: 50054
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: recorder-ingress-http
  namespace: jobico
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - recorder
      secretName: recorder-cert
  rules:
    - host: recorder
      http:
        paths:
          - path: /debug/
            pathType: Prefix
            backend:
              service:
                name: recorder
                port:
                  number: 6060
