k8s/config/repo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: repo
  namespace: jobico
  labels:
    app: repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: repo
  template:
    metadata:
      labels:
        app: repo
    spec:
      containers:
        - name: repo
          image: jobico/repo:latest
          imagePullPolicy: Never
          ports:
          - name: api
            containerPort: 50053
          - name: pprof
            containerPort: 6060
          volumeMounts:
            - name: repo-data
              mountPath: /usr/share/jobico/repo
  volumeClaimTemplates:
    - metadata:
        name: repo-data
        namespace: jobico
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: repo
  name: repo
  namespace: jobico
spec:
  selector:
    app: repo
  ports:
    - name: api
      port: 50053
      targetPort: api
    - name: pprof
      port: 6060
      targetPort: pprof
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: repo-ingress-grpc
  namespace: jobico
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - repo
      secretName: repo-cert
  rules:
    - host: repo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: repo
                port:
                  number: 50053

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: repo-ingress-http
  namespace: jobico
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - repo
      secretName: repo-cert
  rules:
    - host: repo
      http:
        paths:
          - path: /debug/
            pathType: Prefix
            backend:
              service:
                name: repo
                port:
                  number: 6060
